Adding a timeseries for voltage values.